--- a/templates/patient_view_appointment.html
+++ b/templates/patient_view_appointment.html
@@ -1,6 +1,5 @@
-{% extends 'hospital/doctor_base.html' %}
+{% extends 'hospital/patient_base.html' %}
 {% block content %}
-{%load static%}
 
 <head>
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -24,32 +23,31 @@
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6 class="panel-title">Delete Your Appointments</h6>
+      <h6 class="panel-title">Your Appointments</h6>
     </div>
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-          <th>Patient Name</th>
-          <th>Picture</th>
+          <th>Doctor Name</th>
           <th>Description</th>
-          <th>Delete</th>
+          <th>Date</th>
+          <th>Status</th>
         </tr>
       </thead>
-      {% for a,p in appointments %}
+      {% for a in appointments %}
       <tr>
-        <td>{{a.patientName}}</td>
-        <td> <img src="{% static p.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
+        <td> {{a.doctorName}}</td>
         <td>{{a.description}}</td>
-        <td><a class="btn btn-danger btn-xs" href="{% url 'delete-appointment' a.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+        <td>{{a.appointmentDate}}</td>
+        {%if a.status%}
+        <td> <span class="label label-primary">Confirmed</span></td>
+        {% else %}
+        <td> <span class="label label-success">Pending</span></td>
+        {% endif %}
       </tr>
       {% endfor %}
     </table>
   </div>
 </div>
-<!--
-developed By : sumit kumar
-facebook : fb.com/sumit.luv
-youtube : youtube.com/lazycoders
--->
 
 {% endblock content %}
